use specified data/blob path in executor